    (PR rtl-optimization/85412).
  * Update symbols files with buildds’ logs (alpha and kfreebsd-i386).

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Backport remove_need_for_glXGetProcAddressARB.patch. This removes the
    need for using dlopen() and thus libGL.so.1 should be used instead of
    libGL.so (Closes: #913287).

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 16 Nov 2018 11:18:16 +0300

qtbase-opensource-src (5.11.2+dfsg-5) unstable; urgency=medium

  * Add a patch to use qstrncpy instead of strlcpy on GNU/kFreeBSD
    (kfreebsd_qstrncpy.diff).
  * Add a patch to fix ambiguous definition of atime/mtime/ctime
    on alpha, thanks Michael Cree (closes: #896658).
  * debian/rules: Use qmake cross wrapper in Qt5CoreConfigExtras.cmake
    (closes: #913499).

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 12 Nov 2018 10:08:10 +0300

qtbase-opensource-src (5.11.2+dfsg-4) unstable; urgency=medium

  * Mark libvulkan-dev build-dependency as linux-any (closes: #911422).
    Thanks to Samuel Thibault for the initial patch.
  * Move all QtVulkanSupport headers to qtbase5-private-dev package.
    The static library is there, so the headers should also be there.
  * Sort debian/qtbase5-dev.install using wrap-and-sort.
  * Make qtbase5-dev depend on libvulkan-dev on linux, as Qt headers
    include Vulkan headers.
  * Add a patch to pass default include directories to qdoc.
  * Bump qttools build-dependency to 5.11.2-4 (to get unpatched qdoc).
  * Drop Revert-QWidgetWindow-Immediately-forward-close-event.patch.
    The issue was fixed in kxmlgui v5.49.0, no need to patch Qt anymore.
  * Replace hidpi_scale_at_192.diff with a version that has been applied
    upstream (reference_dpi.diff).
  * Backport upstream patch to fix freezes when opening applications
    (dont_get_screen_rotation.diff).

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 29 Oct 2018 22:59:29 +0300

qtbase-opensource-src (5.11.2+dfsg-3) unstable; urgency=medium
